--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
   firebase_analytics: ^11.4.4
+  cloud_firestore: ^5.6.5
  
 
 dev_dependencies:
