--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   path_provider: ^2.1.5
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  firebase_storage: ^12.4.4
+  supabase_flutter: ^2.8.4 
   firebase_analytics: ^11.4.4
   cloud_firestore: ^5.6.5
  
