--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   firebase_storage: ^12.4.4
   supabase_flutter: ^2.8.4 
   # shared_preferences: ^2.0.11
-  # flutter_secure_storage: ^8.0.0 
+  flutter_secure_storage: ^8.0.0 
   firebase_analytics: ^11.4.4
   cloud_firestore: ^5.6.5
  
