--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.5.1
   firebase_storage: ^12.4.4
   supabase_flutter: ^2.8.4 
+  file: ^6.1.4
   # shared_preferences: ^2.0.11
   flutter_secure_storage: ^8.0.0 
   firebase_analytics: ^11.4.4
