--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^12.4.4
   supabase_flutter: ^2.8.4 
   file: ^6.1.4
+  mask_text_input_formatter: ^2.9.0
   # shared_preferences: ^2.0.11
   flutter_secure_storage: ^8.0.0 
   firebase_analytics: ^11.4.4
