--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   firebase_analytics: ^11.4.4
   cloud_firestore: ^5.6.5
   flutter_native_splash: ^2.2.19 # <--- Mantenha apenas uma declaração aqui
-
+  google_fonts: ^6.2.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
