--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   cloud_firestore: ^5.6.5
   flutter_native_splash: ^2.2.19 # <--- Mantenha apenas uma declaração aqui
   google_fonts: ^6.2.1
-  
+  provider: ^6.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
